--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -809,5 +809,16 @@
     "card_type": "Tipos",
     "clans": "Clanes",
     "disciplines": "Disciplinas"
+  },
+  "advent": {
+    "home_title": "Calendario de Adviento VTES {{ year }}",
+    "home_subtitle": "24 días de Desafíos de Construcción de Mazos - ¡Haz clic aquí para unirte!",
+    "rules": "Reglas",
+    "advent_finished_title": "¡El Calendario de Adviento VTES {{ year }} ha terminado!",
+    "advent_finished_subtitle": "¡Gracias a todos los que participaron! ¡Nos vemos el próximo año para más diversión construyendo mazos! ¡Todos los desafíos están disponibles para explorar!",
+    "view_all_decks": "Ver Todos los Mazos de Adviento {{ year }}",
+    "day_completed": "Día {{ day }} - Ver Mazo",
+    "day_start": "Comenzar Desafío",
+    "day_login": "Iniciar sesión para comenzar"
   }
 }
