--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -809,5 +809,16 @@
     "card_type": "Tipos",
     "clans": "Clãs",
     "disciplines": "Disciplinas"
+  },
+  "advent": {
+    "home_title": "Calendário do Advento VTES {{ year }}",
+    "home_subtitle": "24 Dias de Desafios de Construção de Baralhos - Clique aqui para Participar!",
+    "rules": "Regras",
+    "advent_finished_title": "O Calendário do Advento VTES {{ year }} terminou!",
+    "advent_finished_subtitle": "Obrigado a todos que participaram! Nos vemos no próximo ano para mais diversão construindo baralhos! Todos os desafios estão disponíveis para explorar!",
+    "view_all_decks": "Ver Todos os Baralhos do Advento {{ year }}",
+    "day_completed": "Dia {{ day }} - Ver Baralho",
+    "day_start": "Iniciar Desafio",
+    "day_login": "Conectar para Iniciar"
   }
 }
