feat: enhance card display with text icons on hover, update API models, and improve changelog

--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -314,7 +314,7 @@
     "see_more": "Ver mais...",
     "patreon": "Apoie no Patreon",
     "patreon_message": "Este site é 100% gratuito e movido pela comunidade.<br>Se o VTES Decks te ajuda, considere nos apoiar no Patreon ❤️",
-    "patreon_supporter_message": "Obrigado por apoiar o VTES Decks!<br>Seu apoio mantém o VTES Decks vivo ❤️.",
+    "patreon_supporter_message": "Obrigado por apoiar o VTES Decks!<br>Seu apoio mantém o VTES Decks vivo ❤️",
     "contact_support": "Contatar Suporte",
     "whats_new": "Novidades {{ date }}",
     "new": "Novo"
