--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -313,7 +313,7 @@
     "see_more": "Ver más...",
     "patreon": "Apoya en Patreon",
     "patreon_message": "Este sitio es 100% gratuito y está impulsado por la comunidad.<br>Si VTES Decks te resulta útil, considera apoyarnos en Patreon ❤️",
-    "patreon_supporter_message": "¡Gracias por apoyar VTES Decks!<br>Tu apoyo mantiene VTES Decks vivo ❤️.",
+    "patreon_supporter_message": "¡Gracias por apoyar VTES Decks!<br>Tu apoyo mantiene VTES Decks vivo ❤️",
     "contact_support": "Contactar Soporte",
     "whats_new": "Novedades {{ date }}",
     "new": "Nuevo"
