feat: add public user profile pages and enhance supporter visibility across components

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -289,6 +289,7 @@
     "my_collection": "My Collection",
     "my_decks": "My Decks",
     "bookmarks": "Bookmarks",
+    "public_profile": "Public Profile",
     "profile_settings": "Profile Settings",
     "logout": "Logout",
     "theme": "Theme",
@@ -426,7 +427,8 @@
     "list": "List",
     "cards": "cards",
     "apply": "Apply",
-    "proxy_generator": "Proxy Generator"
+    "proxy_generator": "Proxy Generator",
+    "supporter": "Patreon Member"
   },
   "table_seating": {
     "title": "Table Seating",
@@ -450,6 +452,17 @@
     "password_not_same": "Can't be the same as a previous password",
     "save": "Save Profile",
     "error": "An error occurred while updating your settings."
+  },
+  "user_public_profile": {
+    "deck": "deck",
+    "decks": "decks",
+    "public_decks": "Decks",
+    "public_binders": "Collections",
+    "loading": "Loading...",
+    "no_decks_found": "No public decks found",
+    "no_binders_found": "No public collections found",
+    "cards": "cards",
+    "view_all_decks": "View All Decks"
   },
   "verify_account": {
     "success": "Account verified!",
