feat: add uuid package and integrate sessionId in chat requests; enhance loading component with optional text

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -496,7 +496,8 @@
     "limitations": "Limitations",
     "limitation_1": "May occasionally generate incorrect information",
     "limitation_2": "Although it understands other languages, it is trained with the names and rules in English",
-    "limitation_3": "May not know about recent changes in the cards or the rules"
+    "limitation_3": "May not know about recent changes in the cards or the rules",
+    "thinking": "Thinking..."
   },
   "statistics": {
     "statistics": "Statistics",
