--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -98,6 +98,7 @@
     "clone": "Clonar",
     "errata": "Erratas",
     "errata_modified": "foi modificado por uma errata em",
+    "warnings": "Avisos",
     "total_crypt": "Cartões de cripta",
     "disciplines_sup_inf": "{{ count }} Superior | Inferior",
     "total_library": "Cartões de biblioteca",
@@ -691,6 +692,11 @@
       "Werewolf": "Lobisomem",
       "Wraith": "Aparição",
       "Zombie": "Zombie"
+    },
+    "warning": {
+      "spoiler": "Este baralho contém cartas ainda não lançadas e não é legal para torneios.",
+      "tournament_legal_date": "Este baralho não é legal para torneios até {{ date }}.",
+      "banned_cards": "Este baralho contém cartas proibidas e não é legal para torneios."
     }
   },
   "limited_format": {
