feat: add "BETA" badge to AI chat widget and VTES AI component headers; update translations for VTES AI Chat

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -296,7 +296,8 @@
     "theme": "Theme",
     "notifications": "Notifications",
     "unread_notifications": "unread notifications",
-    "proxy_generator": "Proxy Generator"
+    "proxy_generator": "Proxy Generator",
+    "vtes_ai_chat": "VTES AI Chat"
   },
   "home": {
     "welcome_title": "Welcome to VTES Decks",
