feat: add VTES AI Chat feature and update translations in multiple languages

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -430,7 +430,8 @@
     "cards": "cards",
     "apply": "Apply",
     "proxy_generator": "Proxy Generator",
-    "supporter": "Patreon Member"
+    "supporter": "Patreon Member",
+    "vtes_ai_chat": "VTES AI Chat"
   },
   "table_seating": {
     "title": "Table Seating",
