feat: add unreleased flag to ApiCrypt and ApiLibrary

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -169,6 +169,7 @@
   },
   "deck_shared": {
     "banned": "Banned",
+    "unreleased": "Unreleased",
     "rulings": "Rulings",
     "no_rulings": "No rulings available",
     "sets": "Sets",
