--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -169,6 +169,7 @@
   },
   "deck_shared": {
     "banned": "Banida",
+    "unreleased": "Não lançada",
     "rulings": "Regras",
     "no_rulings": "Nenhuma regra disponível",
     "sets": "Expansões",
