feat: add price and total price fields to ApiCollectionCard and update UI for display

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -770,6 +770,8 @@
     "column_icon": "Icon",
     "column_description": "Description",
     "column_visibility": "Visibility",
+    "column_price": "Price",
+    "column_total_price": "Total Price",
     "all": "All",
     "crypt": "Crypt",
     "library": "Library",
