--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -327,7 +327,7 @@
     "patreon_supporter_message": "Thank you for supporting VTES Decks!<br>Your support keeps VTES Decks alive ❤️",
     "contact_support": "Contact Support",
     "whats_new": "What's new {{ date }}",
-    "new": "New"
+    "new_decks": "New Decks"
   },
   "import_amaranth": {
     "title": "Import Amaranth",
@@ -437,7 +437,8 @@
     "apply": "Apply",
     "proxy_generator": "Proxy Generator",
     "supporter": "Patreon Member",
-    "vtes_ai_chat": "VTES AI Chat"
+    "vtes_ai_chat": "VTES AI Chat",
+    "new": "New"
   },
   "table_seating": {
     "title": "Table Seating",
